--- a/Presentation/MovieApi.WebApi/MovieApi.WebApi.csproj
+++ b/Presentation/MovieApi.WebApi/MovieApi.WebApi.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Infrastructure\MoviesApi.Persistence\MoviesApi.Persistence.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\MovieApi.Persistence\MovieApi.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
