--- a/Core/MovieApi.Application/MovieApi.Application.csproj
+++ b/Core/MovieApi.Application/MovieApi.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Infrastructure\MoviesApi.Persistence\MovieApi.Persistence.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\MovieApi.Persistence\MovieApi.Persistence.csproj" />
     <ProjectReference Include="..\MovieApi.Domain\MovieApi.Domain.csproj" />
   </ItemGroup>
 
